# AI-powered-Calling-System

./: Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  calls.py  tenants.py
backend/app/core/: config.py  database.py  mongo.py  redis.py  security.py
backend/app/models/: mongo.py  pg.py
infra/: docker-compose.yml
infra/cloudflare/: tunnel.yml
infra/postgres/: init.sql
