[tool.poetry]
name = "ai-voice-call-platform"
version = "0.1.0"
description = "AI Voice Call Platform — backend"
authors = ["Le Kien Cuong <kiencuongle1442@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
python-multipart = "^0.0.12"

# Auth
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.30.0"          # PostgreSQL async driver
alembic = "^1.14.0"          # migrations
beanie = "^1.27.0"           # MongoDB ODM (async)
motor = "^3.6.0"             # MongoDB async driver
redis = { extras = ["hiredis"], version = "^5.2.0" }

# Vector DB
qdrant-client = "^1.12.0"

# Validation & config
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Task queue
celery = { extras = ["redis"], version = "^5.4.0" }

# HTTP client
httpx = "^0.28.0"

# Utils
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"